--- a/views/order19.ejs
+++ b/views/order19.ejs
@@ -46,21 +46,21 @@
 
       <!-- Nav Item - Flavours -->
       <li class="nav-item">
-        <a class="nav-link" href="/flavours">
+        <a class="nav-link" href="/admin">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>Flavours</span></a>
+          <span>Home</span></a>
       </li>
 
       <!-- Nav Item - Admin level 10 -->
-      <li class="nav-item active">
-        <a class="nav-link" href="/admin10">
+      <li class="nav-item">
+        <a class="nav-link" href="/order10">
           <i class="fas fa-fw fa-table"></i>
           <span>Orders - Level 10</span></a>
       </li>
 
       <!-- Nav Item - Admin level 19 -->
-      <li class="nav-item">
-        <a class="nav-link" href="/admin">
+      <li class="nav-item active">
+        <a class="nav-link" href="/order19">
           <i class="fas fa-fw fa-table"></i>
           <span>Orders - Level 19</span></a>
       </li>
@@ -132,7 +132,7 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-2 text-gray-800">Waffle Orders for Level 10</h1>
+          <h1 class="h3 mb-2 text-gray-800">Waffle Orders for Level 19</h1>
           <p class="mb-4">Orders for the day will appear in the table below in chronological order. Click 'Send Slack' to inform the HubSpotter that their waffle is ready. A green row would indicate a slack had been sent for that HubSpotter. Check the checkbox to indicate that the HubSpotter had collected the waffle.</p>
 
           <!-- Form -->
@@ -140,7 +140,7 @@
             <div class="card-header py-3">
               <h6 class="m-0 font-weight-bold text-primary">Add someone to the queue</h6>
             </div>
-            <form action="/submitadmin10" method="post" class="user">
+            <form action="/submitadmin" method="post" class="user">
               <div class="form-group2">
                 <input type='text' name='email' placeholder='HubSpot email' class="form-control2 form-control-user2" required>
                 <select name="level" class="form-control2 form-control-user2 leveladmin" required>
@@ -149,6 +149,7 @@
                   <option value="l19">Level 19</option>
                 </select> 
                 <input type="submit" name="submit" class="btn btn-primary btn-user2" value="Submit">
+                <button type="button" name="cansubmitliao" value="cansubmitliao">Can submit liao</button>
               </div>
             </form>
           </div>
@@ -266,7 +267,7 @@
 
   <!-- Custom scripts for all pages-->
   <script src="/static/js/sb-admin-2.min.js"></script>
-  <script src="/static/js/orderslackcollection-l10.js"></script>
+  <script src="/static/js/orderslackcollection-l19.js"></script>
 
   <!-- Page level plugins -->
   <script src="/static/vendor/datatables/jquery.dataTables.min.js"></script>
