--- a/public/css/style.css
+++ b/public/css/style.css
@@ -324,6 +324,10 @@ table {
 .marb-35{
     margin-bottom: 35px;
 }
+
+.marb-35-2{
+    margin-top: 35px;
+}
 .details-list{
     margin-top: 20px;
 }
