--- a/views/order10.ejs
+++ b/views/order10.ejs
@@ -170,6 +170,7 @@
                       <th>Send slack</th>
                       <th>Collected</th>
                       <th>Edit</th>
+                      <th>Delete</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -190,6 +191,9 @@
                       <td>
                         <a href="#<%= submission[i]._id %>" rel="modal:open" id=<%= submission[i].email %>>Edit</a>
                       </td> 
+                      <td>
+                        <a href="#<%= submission[i]._id %>2" rel="modal:open" id=<%= submission[i].email %>>Delete</a>
+                      </td> 
                     </tr>
                     <div id=<%= submission[i]._id %> class="modal" style="height: auto; overflow: visible;">
                       <div>
@@ -199,6 +203,13 @@
                       </div>
                       <br>
                       <a href="#" rel="modal:close">Close</a>
+                    </div>
+                    <div id="<%= submission[i]._id %>2" class="modal" style="height: auto; overflow: visible;">
+                      <div style="text-align:center;">
+                        <p>Are you sure you want to delete the submission?</p>
+                        <button name="delete" id=<%= submission[i]._id %>>Yes</button>
+                        <a href="#" rel="modal:close">Cancel</a>
+                      </div>
                     </div>
                     <% } %>
 
