--- a/views/queue2.ejs
+++ b/views/queue2.ejs
@@ -56,10 +56,13 @@
         </div>
       </header>
       <div class="container">
+        <div class="col-md-12 text-center marb-35-2" style="float: none;">
+          <h1 class="header-h">Waiting List</h1>
+        </div>
         <div class="col-md-5  text-center waitingcontainer">
           <div class="row">
             <div class="col-md-12 text-center marb-35" style="float: none;">
-              <h1 class="header-h">Level 10 Waiting List</h1>
+              <h1 class="header-h">Level 10</h1>
             </div>
 
 
@@ -83,7 +86,7 @@
         <div class="col-md-5  text-center waitingcontainer">
           <div class="row">
             <div class="col-md-12 text-center marb-35" style="float: none;">
-              <h1 class="header-h">Level 19 Waiting List</h1>
+              <h1 class="header-h">Level 19</h1>
             </div>
 
 
