updated url in submit form to cyclic

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -158,7 +158,7 @@
                   <label>Slack message</label>
                   <textarea rows="3" cols="48" name="slackmsg" class="form-control3 form-control-user2" required>
 <!here> You can start ordering waffles now!
-Order link: https://singspotwaffles.herokuapp.com/ 
+Order link: https://singspotwaffles.cyclic.app/ 
 Waffle flavour: </textarea>
                 </div>
                 <div class="form-group3">
